tests/cases/errors/compile_no_expression.lox
// A bare operator has no prefix rule.
// expect compile error: Expect expression
+
